# diffsol

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  noxfile.py  pe_inspect.py  pytest.ini  temp.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  notebooks.yml  perf.yml  security.yml  wheels.yml
benchmarks/: gpu_validation.py  perf.py  results.md
bindings/diffsol-pytorch/: Cargo.toml  README.md  build.rs  pyproject.toml
bindings/diffsol-pytorch/python/diffsol_pytorch/: __init__.py  device.py  testing.py
bindings/diffsol-pytorch/src/: autograd.rs  diagnostics.rs  error.rs  interface.rs  lib.rs  memory.rs  python.rs
bindings/diffsol-pytorch/tests/: conftest.py  memory_stress.rs  test_device.py  test_gradients.py  test_import.py  test_scientific_validation.py  test_stress.py
bindings/diffsol-pytorch/tests/gradient/: test_finite_difference.py
bindings/diffsol-pytorch/tests/integration/: test_pytorch_workflow.py
bindings/diffsol-pytorch/tests/memory/: test_leak_profile.py
bindings/diffsol-pytorch/tests/perf/: test_benchmarks.py
bindings/diffsol-pytorch/tests/unit/: test_core.py
diffsol/src/ode_solver/: builder.rs
docker/: Dockerfile  Dockerfile.gpu  Dockerfile.llvm  README.md
docs/: Makefile  api.rst  architecture.rst  benchmarks.rst  community.rst  conf.py  ecosystem.rst  getting-started.rst  index.rst  install.rst  migration.rst  performance.rst  release-strategy.rst  requirements.txt  scientific-examples.rst  troubleshooting.rst  user-guide.rst
docs/notebooks/: cnf_mnist.ipynb  hello_diffsol.ipynb  helpers.py  neural_ode_classifier.ipynb  parameter_estimation.ipynb  pinn_wave_equation.ipynb  tutorial.ipynb
docs/notebooks/_cache/: cnf_gpu_metrics.json  neural_ode_gpu_metrics.json
examples/integration/: README.md  jax_bridge.py
examples/integration/cnf/: mnist_cnf.py
examples/integration/neural_ode/: train.py
examples/integration/parameter_estimation/: estimate.py
examples/integration/pinn/: train.py
examples/neural-ode-weather-prediction/src/data/: pre-process.py
examples/python-diffsol/test/: test_solve.py
examples/scientific/: dae_index1.py  double_pendulum.py  hamiltonian.py  lorenz.py  sensitivity.py  van_der_pol.py
packaging/: README.md  build.py
packaging/conda/: meta.yaml
scripts/: leakcheck.sh  run_validation.py
tools/: prepare_toolchain.py
