[package]
name = "diffsol-pytorch"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
name = "diffsol_pytorch"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["cranelift"]
cranelift = ["diffsol/diffsl-cranelift"]
llvm = ["diffsol/diffsl-llvm18"]
python = ["pyo3", "env_logger"]
diagnostics = []
mem-profiling = ["diagnostics", "tikv-jemallocator", "tikv-jemalloc-ctl"]

[dependencies]
diffsol = { path = "../../diffsol", features = ["nalgebra"] }
thiserror = "1.0"
parking_lot = "0.12"
pyo3 = { version = "0.25", features = ["extension-module"], optional = true }
log = "0.4"
env_logger = { version = "0.11", optional = true }
tikv-jemallocator = { version = "0.5", optional = true }
tikv-jemalloc-ctl = { version = "0.5", optional = true }

[[bin]]
name = "leak_harness"
path = "src/bin/leak_harness.rs"
required-features = ["mem-profiling"]
